--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <a href="" class="text-decoration-none">
               <div class="col">
                 <div class="card h-100">
-                  <div class="inner"><img src="images/rooms1.jpg" class="card-img-top" alt="..." /></div>
+                  <div class="inner"><img src="images/card1.png" class="card-img-top" alt="..." /></div>
                   <div class="card-body">
                     <h5 class="card-title">Ac Rooms</h5>
                     <div class="line">
@@ -182,7 +182,7 @@
             <a href="" class="text-decoration-none">
               <div class="col">
                 <div class="card h-100">
-                  <div class="inner"><img src="images/holl1.jpg" class="card-img-top" alt="..." /></div>
+                  <div class="inner"><img src="images/card2.jpg" class="card-img-top" alt="..." /></div>
                   <div class="card-body">
                     <h5 class="card-title">Event Hall</h5>
                     <div class="line">
@@ -198,7 +198,7 @@
             <a href="" class="text-decoration-none">
               <div class="col">
                 <div class="card h-100">
-                  <div class="inner"><img src="images/water-park1.jpeg" class="card-img-top" alt="..." /></div>
+                  <div class="inner"><img src="images/card3.jpg" class="card-img-top" alt="..." /></div>
                   <div class="card-body">
                     <h5 class="card-title">Swimming Pool</h5>
                     <div class="line">
@@ -214,7 +214,7 @@
             <a href="" class="text-decoration-none">
               <div class="col">
                 <div class="card h-100">
-                  <div class="inner"><img src="images/index_img_2.jpeg" class="card-img-top" alt="..." /></div>
+                  <div class="inner"><img src="images/card4.jpg" class="card-img-top" alt="..." /></div>
                   <div class="card-body">
                     <h5 class="card-title">Fitness Club</h5>
                     <div class="line">
@@ -235,7 +235,7 @@
       <div class="row">
         <div class="col-lg-6 col-md-6 col-12">
           <div class="inner" data-aos="fade-up" data-aos-offset="200" data-aos-easing="ease-in-sine">
-            <img src="images/utsav1.jpeg" alt="">
+            <img src="images/about-giselle.jpg" alt="">
           </div>
         </div>
         <div class="col-lg-6 col-md-6 col-12" data-aos="fade-up" data-aos-offset="200" data-aos-easing="ease-in-sine">
