--- a/index.html
+++ b/index.html
@@ -338,28 +338,28 @@
               <div class="tz-gallery">
                 <div class="row">
                   <div class="col-sm-12 col-md-4">
-                    <a class="lightbox" href="images/rooms1.jpg">
-                      <img src="images/rooms1.jpg" alt="Bridge">
+                    <a class="lightbox" href="images/bestroom1.jpg">
+                      <img src="images/bestroom1.jpg" alt="Bridge">
                     </a>
                   </div>
                   <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="images/rooms1.jpg">
-                      <img src="images/rooms1.jpg" alt="Bridge">
+                    <a class="lightbox" href="images/bestroom2.jpg">
+                      <img src="images/bestroom2.jpg" alt="Bridge">
                     </a>
                   </div>
                   <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="images/rooms1.jpg">
-                      <img src="images/rooms1.jpg" alt="Bridge">
+                    <a class="lightbox" href="images/bestroom3.jpg">
+                      <img src="images/bestroom3.jpg" alt="Bridge">
                     </a>
                   </div>
                   <div class="col-sm-12 col-md-8">
-                    <a class="lightbox" href="images/rooms1.jpg">
-                      <img src="images/rooms1.jpg" alt="Bridge">
+                    <a class="lightbox" href="images/bestroom4.jpg">
+                      <img src="images/bestroom4.jpg" alt="Bridge">
                     </a>
                   </div>
                   <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="images/rooms1.jpg">
-                      <img src="images/rooms1.jpg" alt="Bridge">
+                    <a class="lightbox" href="images/bestroom5.jpg">
+                      <img src="images/bestroom5.jpg" alt="Bridge">
                     </a>
                   </div>
                 </div>
@@ -372,28 +372,28 @@
               <div class="tz-gallery">
                 <div class="row">
                   <div class="col-sm-12 col-md-4">
-                    <a class="lightbox" href="images/water-park1.jpeg">
-                      <img src="images/water-park1.jpeg" alt="Bridge">
+                    <a class="lightbox" href="images/water park1.jpg">
+                      <img src="images/water park1.jpg" alt="Bridge">
                     </a>
                   </div>
                   <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="images/water-park2.jpeg">
-                      <img src="images/water-park2.jpeg" alt="Bridge">
+                    <a class="lightbox" href="images/water park2.jpg">
+                      <img src="images/water park2.jpg" alt="Bridge">
                     </a>
                   </div>
                   <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="images/water-park3.jpeg">
-                      <img src="images/water-park3.jpeg" alt="Bridge">
+                    <a class="lightbox" href="images/water park3.jpg">
+                      <img src="images/water park3.jpg" alt="Bridge">
                     </a>
                   </div>
                   <div class="col-sm-12 col-md-8">
-                    <a class="lightbox" href="images/water-park4.jpeg">
-                      <img src="images/water-park4.jpeg" alt="Bridge">
+                    <a class="lightbox" href="images/water park4.jpg">
+                      <img src="images/water park4.jpg" alt="Bridge">
                     </a>
                   </div>
                   <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="images/water-park5.jpeg">
-                      <img src="images/water-park5.jpeg" alt="Bridge">
+                    <a class="lightbox" href="images/water park5.jpg">
+                      <img src="images/water park5.jpg" alt="Bridge">
                     </a>
                   </div>
                 </div>
@@ -406,28 +406,28 @@
               <div class="tz-gallery">
                 <div class="row">
                   <div class="col-sm-12 col-md-4">
-                    <a class="lightbox" href="images/sports1.jpg">
-                      <img src="images/sports1.jpg" alt="Bridge">
+                    <a class="lightbox" href="images/sports1.png">
+                      <img src="images/sports1.png" alt="Bridge">
                     </a>
                   </div>
                   <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="images/sports1.jpg">
-                      <img src="images/sports1.jpg" alt="Bridge">
+                    <a class="lightbox" href="images/sports2.jpg">
+                      <img src="images/sports2.jpg" alt="Bridge">
                     </a>
                   </div>
                   <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="images/sports1.jpg">
-                      <img src="images/sports1.jpg" alt="Bridge">
+                    <a class="lightbox" href="images/sports3.jpg">
+                      <img src="images/sports3.jpg" alt="Bridge">
                     </a>
                   </div>
                   <div class="col-sm-12 col-md-8">
-                    <a class="lightbox" href="images/sports1.jpg">
-                      <img src="images/sports1.jpg" alt="Bridge">
+                    <a class="lightbox" href="images/sports4.jpg">
+                      <img src="images/sports4.jpg" alt="Bridge">
                     </a>
                   </div>
                   <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="images/sports1.jpg">
-                      <img src="images/sports1.jpg" alt="Bridge">
+                    <a class="lightbox" href="images/sports5.jpg">
+                      <img src="images/sports5.jpg" alt="Bridge">
                     </a>
                   </div>
                 </div>
@@ -440,28 +440,28 @@
               <div class="tz-gallery">
                 <div class="row">
                   <div class="col-sm-12 col-md-4">
-                    <a class="lightbox" href="images/evants2.jpg">
-                      <img src="images/evants2.jpg" alt="Bridge">
+                    <a class="lightbox" href="images/events1.jpg">
+                      <img src="images/events1.jpg" alt="Bridge">
                     </a>
                   </div>
                   <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="images/evants2.jpg">
-                      <img src="images/evants2.jpg" alt="Bridge">
+                    <a class="lightbox" href="images/events2.jpg">
+                      <img src="images/events2.jpg" alt="Bridge">
                     </a>
                   </div>
                   <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="images/evants2.jpg">
-                      <img src="images/evants2.jpg" alt="Bridge">
+                    <a class="lightbox" href="images/events3.jpg">
+                      <img src="images/events3.jpg" alt="Bridge">
                     </a>
                   </div>
                   <div class="col-sm-12 col-md-8">
-                    <a class="lightbox" href="images/evants2.jpg">
-                      <img src="images/evants2.jpg" alt="Bridge">
+                    <a class="lightbox" href="images/events4.jpg">
+                      <img src="images/events4.jpg" alt="Bridge">
                     </a>
                   </div>
                   <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="images/evants2.jpg">
-                      <img src="images/evants2.jpg" alt="Bridge">
+                    <a class="lightbox" href="images/events5.jpg">
+                      <img src="images/events5.jpg" alt="Bridge">
                     </a>
                   </div>
                 </div>
