--- a/index.html
+++ b/index.html
@@ -277,12 +277,9 @@
           labore.</p>
 
         <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+        
           <li class="nav-item" role="presentation">
-            <button class="nav-link active" id="pills-Hotel-tab" data-bs-toggle="pill" data-bs-target="#pills-Hotel"
-              type="button" role="tab" aria-controls="pills-Wedding" aria-selected="true">Hotel</button>
-          </li>
-          <li class="nav-item" role="presentation">
-            <button class="nav-link" id="pills-Rooms-tab" data-bs-toggle="pill" data-bs-target="#pills-Rooms"
+            <button class="nav-link active" id="pills-Rooms-tab" data-bs-toggle="pill" data-bs-target="#pills-Rooms"
               type="button" role="tab" aria-controls="pills-Rooms" aria-selected="false">Rooms</button>
           </li>
           <li class="nav-item" role="presentation">
@@ -299,41 +296,9 @@
           </li>
         </ul>
         <div class="tab-content" id="pills-tabContent">
-          <div class="tab-pane fade show active" id="pills-Hotel" role="tabpanel" aria-labelledby="pills-Hotel-tab">
-            <div class="container gallery-container">
-              <div class="tz-gallery">
-                <div class="row">
-                  <div class="col-sm-12 col-md-4">
-                    <a class="lightbox" href="images/hotel1.jpeg">
-                      <img src="images/hotel1.jpeg" alt="Bridge">
-                    </a>
-                  </div>
-                  <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="images/hotel2.jpeg">
-                      <img src="images/hotel2.jpeg" alt="Park">
-                    </a>
-                  </div>
-                  <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="images/hotel3.jpeg">
-                      <img src="images/hotel3.jpeg" alt="Tunnel">
-                    </a>
-                  </div>
-                  <div class="col-sm-12 col-md-8">
-                    <a class="lightbox" href="images/hotel4.jpeg">
-                      <img src="images/hotel4.jpeg" alt="Traffic">
-                    </a>
-                  </div>
-                  <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="images/hotel5.jpeg">
-                      <img src="images/hotel5.jpeg" alt="Rails">
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+        
 
-          <div class="tab-pane fade" id="pills-Rooms" role="tabpanel" aria-labelledby="pills-Rooms-tab">
+          <div class="tab-pane fade show active" id="pills-Rooms" role="tabpanel" aria-labelledby="pills-Rooms-tab">
             <div class="container gallery-container">
               <div class="tz-gallery">
                 <div class="row">
@@ -507,7 +472,7 @@
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, autem!</p>
                   </div>
                   <div class="inner">
-                    <img src="images/decoration_table.jpg" class="card-img-bottom" alt="...">
+                    <img src="images/decoration-tabel.jpg" class="card-img-bottom" alt="...">
                   </div>
                 </div>
               </a>
