--- a/index.html
+++ b/index.html
@@ -158,10 +158,11 @@
           <div class="div_1"></div>
           <div class="div_2"></div>
         </div>
-        <p class="p"  data-aos="fade-up" data-aos-offset="200" data-aos-easing="ease-in-sine">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+        <p class="p" data-aos="fade-up" data-aos-offset="200" data-aos-easing="ease-in-sine">Lorem ipsum dolor sit amet,
+          consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
           labore.</p>
 
-        <div class="cards_box"  data-aos="fade-up" data-aos-offset="200" data-aos-easing="ease-in-sine">
+        <div class="cards_box" data-aos="fade-up" data-aos-offset="200" data-aos-easing="ease-in-sine">
           <div class="row row-cols-1 row-cols-md-4 g-4">
             <a href="" class="text-decoration-none">
               <div class="col">
@@ -256,7 +257,8 @@
 
     <section class="videos">
       <div class="container">
-        <iframe src="https://www.youtube.com/embed/N_1Y-9ADdO8" title="YouTube video player" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/kZjRYBFw1wA" title="YouTube video player"
+          frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
         <div class="btn_box">
@@ -268,7 +270,7 @@
 
     <section class="our_specialists container">
       <div class="box" data-aos="fade-up" data-aos-offset="200" data-aos-easing="ease-in-sine">
-        <h3 class="h3" >Specialities Our Hotel</h3>
+        <h3 class="h3">Specialities Our Hotel</h3>
         <div class="line">
           <div class="div_1"></div>
           <div class="div_2"></div>
@@ -277,7 +279,7 @@
           labore.</p>
 
         <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-        
+
           <li class="nav-item" role="presentation">
             <button class="nav-link active" id="pills-Rooms-tab" data-bs-toggle="pill" data-bs-target="#pills-Rooms"
               type="button" role="tab" aria-controls="pills-Rooms" aria-selected="false">Rooms</button>
@@ -296,7 +298,7 @@
           </li>
         </ul>
         <div class="tab-content" id="pills-tabContent">
-        
+
 
           <div class="tab-pane fade show active" id="pills-Rooms" role="tabpanel" aria-labelledby="pills-Rooms-tab">
             <div class="container gallery-container">
@@ -451,7 +453,8 @@
             labore.</p>
 
           <div class="row">
-            <div class="col-lg-6 col-md-6 col-12" data-aos="fade-up" data-aos-offset="200" data-aos-easing="ease-in-sine">
+            <div class="col-lg-6 col-md-6 col-12" data-aos="fade-up" data-aos-offset="200"
+              data-aos-easing="ease-in-sine">
               <a href="" class="text-decoration-none">
                 <div class="card shadow-lg">
                   <div class="card-body">
@@ -464,7 +467,8 @@
                 </div>
               </a>
             </div>
-            <div class="col-lg-6 col-md-6 col-12" data-aos="fade-up" data-aos-offset="200" data-aos-easing="ease-in-sine">
+            <div class="col-lg-6 col-md-6 col-12" data-aos="fade-up" data-aos-offset="200"
+              data-aos-easing="ease-in-sine">
               <a href="" class="text-decoration-none">
                 <div class="card shadow-lg">
                   <div class="card-body">
@@ -478,9 +482,6 @@
               </a>
             </div>
           </div>
-
-
-
         </div>
     </section>
     <!--end of wedding_and_event-->
