--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="./images/logo.png" alt=""></a>
+        <a class="navbar-brand" href="#">Utsav</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -462,7 +462,7 @@
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, aliquam?</p>
                   </div>
                   <div class="inner">
-                    <img src="images/evants2.jpg" class="card-img-bottom" alt="...">
+                    <img src="images/ev" class="card-img-bottom" alt="...">
                   </div>
                 </div>
               </a>
