--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, aliquam?</p>
                   </div>
                   <div class="inner">
-                    <img src="images/ev" class="card-img-bottom" alt="...">
+                    <img src="images/events2.jpg" class="card-img-bottom" alt="...">
                   </div>
                 </div>
               </a>
