--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Utsav</a>
+        <a class="navbar-brand" href="#"><h1>Utsav</h1></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -44,10 +44,7 @@
               <a class="nav-link" href="#">Restaurant</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Club House</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Waterpark</a>
+              <a class="nav-link" href="#">Club House & Waterpark</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Rooms</a>
@@ -62,7 +59,7 @@
               <a class="nav-link" href="#">Features</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
+              <a class="nav-link" href="#">Contact Us</a>
             </li>
 
 
