--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><h1>Utsav</h1></a>
+        <a class="navbar-brand" href="#">
+          <h1>Utsav</h1>
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -56,9 +58,6 @@
               <a class="nav-link" href="#">Wedding & Events</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link" href="#">Contact Us</a>
             </li>
 
@@ -69,7 +68,7 @@
     </nav>
 
     <section class="index_header">
-      <div class="owl-carousel owl-theme">
+      <div class="owl-carousel owl-carousel-1 owl-theme">
         <div class="item item_child_1">
           <div class="child_div">
             <div class="container">
@@ -164,7 +163,7 @@
             <a href="" class="text-decoration-none">
               <div class="col">
                 <div class="card h-100">
-                  <div class="inner"><img src="images/card1.png" class="card-img-top" alt="..." /></div>
+                  <div class="inner"><img src="images/card1.png" class="card-img-top" alt="ac-room-img" /></div>
                   <div class="card-body">
                     <h5 class="card-title">Ac Rooms</h5>
                     <div class="line">
@@ -180,9 +179,9 @@
             <a href="" class="text-decoration-none">
               <div class="col">
                 <div class="card h-100">
-                  <div class="inner"><img src="images/card2.jpg" class="card-img-top" alt="..." /></div>
+                  <div class="inner"><img src="images/card2.jpg" class="card-img-top" alt="Banquet-hall-img" /></div>
                   <div class="card-body">
-                    <h5 class="card-title">Event Hall</h5>
+                    <h5 class="card-title">Banquet Hall</h5>
                     <div class="line">
                       <div class="div_1"></div>
                       <div class="div_2"></div>
@@ -196,9 +195,9 @@
             <a href="" class="text-decoration-none">
               <div class="col">
                 <div class="card h-100">
-                  <div class="inner"><img src="images/card3.jpg" class="card-img-top" alt="..." /></div>
+                  <div class="inner"><img src="images/card3.jpg" class="card-img-top" alt=" Water-park-img" /></div>
                   <div class="card-body">
-                    <h5 class="card-title">Swimming Pool</h5>
+                    <h5 class="card-title"> Water park </h5>
                     <div class="line">
                       <div class="div_1"></div>
                       <div class="div_2"></div>
@@ -212,9 +211,73 @@
             <a href="" class="text-decoration-none">
               <div class="col">
                 <div class="card h-100">
-                  <div class="inner"><img src="images/card4.jpg" class="card-img-top" alt="..." /></div>
+                  <div class="inner"><img src="images/card4.jpg" class="card-img-top" alt="Gym-img" /></div>
                   <div class="card-body">
-                    <h5 class="card-title">Fitness Club</h5>
+                    <h5 class="card-title">Gym</h5>
+                    <div class="line">
+                      <div class="div_1"></div>
+                      <div class="div_2"></div>
+                    </div>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                  </div>
+                </div>
+              </div>
+            </a>
+
+            <a href="" class="text-decoration-none">
+              <div class="col">
+                <div class="card h-100">
+                  <div class="inner"><img src="images/club-house.jpg" class="card-img-top" alt="club-house-img" /></div>
+                  <div class="card-body">
+                    <h5 class="card-title">Club House</h5>
+                    <div class="line">
+                      <div class="div_1"></div>
+                      <div class="div_2"></div>
+                    </div>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                  </div>
+                </div>
+              </div>
+            </a>
+
+            <a href="" class="text-decoration-none">
+              <div class="col">
+                <div class="card h-100">
+                  <div class="inner"><img src="images/restaurant.jpg" class="card-img-top" alt="restaurant-img" /></div>
+                  <div class="card-body">
+                    <h5 class="card-title">Restaurant</h5>
+                    <div class="line">
+                      <div class="div_1"></div>
+                      <div class="div_2"></div>
+                    </div>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                  </div>
+                </div>
+              </div>
+            </a>
+
+            <a href="" class="text-decoration-none">
+              <div class="col">
+                <div class="card h-100">
+                  <div class="inner"><img src="images/lawn.jpg" class="card-img-top" alt="lawn-img" /></div>
+                  <div class="card-body">
+                    <h5 class="card-title">Lawn</h5>
+                    <div class="line">
+                      <div class="div_1"></div>
+                      <div class="div_2"></div>
+                    </div>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                  </div>
+                </div>
+              </div>
+            </a>
+
+            <a href="" class="text-decoration-none">
+              <div class="col">
+                <div class="card h-100">
+                  <div class="inner"><img src="images/tennis-court.jpg" class="card-img-top" alt="tennis-court" /></div>
+                  <div class="card-body">
+                    <h5 class="card-title">Tennis Court</h5>
                     <div class="line">
                       <div class="div_1"></div>
                       <div class="div_2"></div>
@@ -254,8 +317,7 @@
 
     <section class="videos">
       <div class="container">
-        <iframe src="https://www.youtube.com/embed/kZjRYBFw1wA" title="YouTube video player"
-          frameborder="0"
+        <iframe src="https://www.youtube.com/embed/kZjRYBFw1wA" title="YouTube video player" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
         <div class="btn_box">
@@ -265,178 +327,46 @@
     </section>
     <!--end of videos-->
 
-    <section class="our_specialists container">
+    <section class="team container">
       <div class="box" data-aos="fade-up" data-aos-offset="200" data-aos-easing="ease-in-sine">
-        <h3 class="h3">Specialities Our Hotel</h3>
+        <h3 class="h3">Team</h3>
         <div class="line">
           <div class="div_1"></div>
           <div class="div_2"></div>
         </div>
-        <p class="p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-          labore.</p>
 
-        <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-
-          <li class="nav-item" role="presentation">
-            <button class="nav-link active" id="pills-Rooms-tab" data-bs-toggle="pill" data-bs-target="#pills-Rooms"
-              type="button" role="tab" aria-controls="pills-Rooms" aria-selected="false">Rooms</button>
-          </li>
-          <li class="nav-item" role="presentation">
-            <button class="nav-link" id="pills-Water-Park-tab" data-bs-toggle="pill" data-bs-target="#pills-Water-Park"
-              type="button" role="tab" aria-controls="pills-Water-Park" aria-selected="false">Water Park</button>
-          </li>
-          <li class="nav-item" role="presentation">
-            <button class="nav-link" id="pills-sports-tab" data-bs-toggle="pill" data-bs-target="#pills-sports"
-              type="button" role="tab" aria-controls="pills-sports" aria-selected="false">sports</button>
-          </li>
-          <li class="nav-item" role="presentation">
-            <button class="nav-link" id="pills-evants-tab" data-bs-toggle="pill" data-bs-target="#pills-evants"
-              type="button" role="tab" aria-controls="pills-evants" aria-selected="false">Evants</button>
-          </li>
-        </ul>
-        <div class="tab-content" id="pills-tabContent">
-
-
-          <div class="tab-pane fade show active" id="pills-Rooms" role="tabpanel" aria-labelledby="pills-Rooms-tab">
-            <div class="container gallery-container">
-              <div class="tz-gallery">
-                <div class="row">
-                  <div class="col-sm-12 col-md-4">
-                    <a class="lightbox" href="images/bestroom1.jpg">
-                      <img src="images/bestroom1.jpg" alt="Bridge">
-                    </a>
-                  </div>
-                  <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="images/bestroom2.jpg">
-                      <img src="images/bestroom2.jpg" alt="Bridge">
-                    </a>
-                  </div>
-                  <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="images/bestroom3.jpg">
-                      <img src="images/bestroom3.jpg" alt="Bridge">
-                    </a>
-                  </div>
-                  <div class="col-sm-12 col-md-8">
-                    <a class="lightbox" href="images/bestroom4.jpg">
-                      <img src="images/bestroom4.jpg" alt="Bridge">
-                    </a>
-                  </div>
-                  <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="images/bestroom5.jpg">
-                      <img src="images/bestroom5.jpg" alt="Bridge">
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
+        <div class="owl-carousel owl-carousel-2 owl-theme">
+          <div class="item">
+            <div><img src="images/client1.jpg" alt=""></div>
+            <h5>John Mack</h5>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio culpa cupiditate quis temporibus in
+              aliquid fugit. Doloribus aspernatur, recusandae illo adipisci nobis quae voluptatibus praesentium,
+              veritatis, accusamus nulla deleniti earum.</p>
+          </div>
+          <div class="item">
+            <div><img src="images/client2.jpg" alt=""></div>
+            <h5>Richi Sina</h5>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio culpa cupiditate quis temporibus in
+              aliquid fugit. Doloribus aspernatur, recusandae illo adipisci nobis quae voluptatibus praesentium,
+              veritatis, accusamus nulla deleniti earum.</p>
           </div>
 
-          <div class="tab-pane fade" id="pills-Water-Park" role="tabpanel" aria-labelledby="pills-Water-Park-tab">
-            <div class="container gallery-container">
-              <div class="tz-gallery">
-                <div class="row">
-                  <div class="col-sm-12 col-md-4">
-                    <a class="lightbox" href="images/water park1.jpg">
-                      <img src="images/water park1.jpg" alt="Bridge">
-                    </a>
-                  </div>
-                  <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="images/water park2.jpg">
-                      <img src="images/water park2.jpg" alt="Bridge">
-                    </a>
-                  </div>
-                  <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="images/water park3.jpg">
-                      <img src="images/water park3.jpg" alt="Bridge">
-                    </a>
-                  </div>
-                  <div class="col-sm-12 col-md-8">
-                    <a class="lightbox" href="images/water park4.jpg">
-                      <img src="images/water park4.jpg" alt="Bridge">
-                    </a>
-                  </div>
-                  <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="images/water park5.jpg">
-                      <img src="images/water park5.jpg" alt="Bridge">
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="tab-pane fade" id="pills-sports" role="tabpanel" aria-labelledby="pills-sports-tab">
-            <div class="container gallery-container">
-              <div class="tz-gallery">
-                <div class="row">
-                  <div class="col-sm-12 col-md-4">
-                    <a class="lightbox" href="images/sports1.png">
-                      <img src="images/sports1.png" alt="Bridge">
-                    </a>
-                  </div>
-                  <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="images/sports2.jpg">
-                      <img src="images/sports2.jpg" alt="Bridge">
-                    </a>
-                  </div>
-                  <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="images/sports3.jpg">
-                      <img src="images/sports3.jpg" alt="Bridge">
-                    </a>
-                  </div>
-                  <div class="col-sm-12 col-md-8">
-                    <a class="lightbox" href="images/sports4.jpg">
-                      <img src="images/sports4.jpg" alt="Bridge">
-                    </a>
-                  </div>
-                  <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="images/sports5.jpg">
-                      <img src="images/sports5.jpg" alt="Bridge">
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="tab-pane fade" id="pills-evants" role="tabpanel" aria-labelledby="pills-evants-tab">
-            <div class="container gallery-container">
-              <div class="tz-gallery">
-                <div class="row">
-                  <div class="col-sm-12 col-md-4">
-                    <a class="lightbox" href="images/events1.jpg">
-                      <img src="images/events1.jpg" alt="Bridge">
-                    </a>
-                  </div>
-                  <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="images/events2.jpg">
-                      <img src="images/events2.jpg" alt="Bridge">
-                    </a>
-                  </div>
-                  <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="images/events3.jpg">
-                      <img src="images/events3.jpg" alt="Bridge">
-                    </a>
-                  </div>
-                  <div class="col-sm-12 col-md-8">
-                    <a class="lightbox" href="images/events4.jpg">
-                      <img src="images/events4.jpg" alt="Bridge">
-                    </a>
-                  </div>
-                  <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="images/events5.jpg">
-                      <img src="images/events5.jpg" alt="Bridge">
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
+          <div class="item">
+            <div><img src="images/client3.jpg" alt=""></div>
+            <h5>Mahindra</h5>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio culpa cupiditate quis temporibus in
+              aliquid fugit. Doloribus aspernatur, recusandae illo adipisci nobis quae voluptatibus praesentium,
+              veritatis, accusamus nulla deleniti earum.</p>
           </div>
 
         </div>
+
+
+
+
       </div>
     </section>
-    <!--end of event_types-->
+    <!--end of Team-->
 
     <section class="wedding_and_event">
       <div class="container">
@@ -449,35 +379,26 @@
           <p class="p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
             labore.</p>
 
-          <div class="row">
-            <div class="col-lg-6 col-md-6 col-12" data-aos="fade-up" data-aos-offset="200"
-              data-aos-easing="ease-in-sine">
-              <a href="" class="text-decoration-none">
-                <div class="card shadow-lg">
-                  <div class="card-body">
-                    <h5 class="card-title"><span><i class="far fa-file-alt"></i></span> Event Planning</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, aliquam?</p>
-                  </div>
-                  <div class="inner">
-                    <img src="images/events2.jpg" class="card-img-bottom" alt="...">
-                  </div>
+          <div class="owl-carousel owl-carousel-3 owl-theme">
+            <div class="item item-1">
+              <div class="inner-item">
+                <h5> Event Planning</h5>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus, obcaecati? Molestiae rerum blanditiis doloremque sunt.</p>
+                <div class="btn_box">
+                  <a href="" class="btn">Contact Us</a>
                 </div>
-              </a>
+              </div>
             </div>
-            <div class="col-lg-6 col-md-6 col-12" data-aos="fade-up" data-aos-offset="200"
-              data-aos-easing="ease-in-sine">
-              <a href="" class="text-decoration-none">
-                <div class="card shadow-lg">
-                  <div class="card-body">
-                    <h5 class="card-title"><span><i class="far fa-star"></i></span>Decoration Table</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, autem!</p>
-                  </div>
-                  <div class="inner">
-                    <img src="images/decoration-tabel.jpg" class="card-img-bottom" alt="...">
-                  </div>
+            <div class="item item-2">
+              <div class="inner-item">
+                <h5>Decoration Table</h5>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo quasi unde consectetur saepe dignissimos? Cumque?</p>
+                <div class="btn_box">
+                  <a href="" class="btn">Contact Us</a>
                 </div>
-              </a>
+              </div>
             </div>
+
           </div>
         </div>
     </section>
